support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_using_undef.i
%module xxx

using foo::bar;
using namespace foo;





